# HyperPlaneArrangementSAGE

./: .gitignore  B2_multi_arrangement.ipynb  Examples_NTF-2.ipynb  Experiment_Saito_criterion.ipynb  LogarithmicVectorFieldsOfArrangements.ipynb  README.md  Saito_criterion_examples.ipynb  constructive_closure_demo.ipynb  pyproject.toml  setup.py  vector_field_reconstruction.ipynb  vector_field_reconstruction_3d.ipynb
data/minimal_region/: B2.csv  bench_parallel.json  bench_single.json  out.json  results.csv  sasaki.csv
examples/: flowsim_numpy.py  polynomial_degree_comparison.sage  practical_flow_fit.sage  triangle_example.sage  vorticity_fit_demo.sage
notebooks/: B2_multi_arrangement.ipynb  Examples_NTF-2.ipynb  Library_Demo.ipynb  LogarithmicVectorFieldsOfArrangements.ipynb  MinimalRegionPlaneCut.ipynb  README.md  Saito_criterion_examples.ipynb  constructive_closure.ipynb  experiment_saito.ipynb  vector_field_reconstruction.ipynb  vector_field_reconstruction_3d.ipynb
src/: test_basis_da.py  verify_arrangement.py
src/hyperplane_arrangements/: __init__.py  arrangement.py  arrangement_plotting.py  field_tools.py  fit.py  library.py  minimal_region.py  minimal_region_nd.py  saito_diagnostics.py  tangential_field.py  utils.py  vector_field.py
src/hyperplane_arrangements/cpp/minimal_region/: Makefile  solver.cpp
tests/: test_arrangement.py  test_arrangement_plotting.py  test_characteristic_polynomial.py  test_field_tools.py  test_library.py  test_minimal_region.py  test_minimal_region_nd.py  test_saito_diagnostics.py  test_tangential_field.py
